--- a/src/main/ng/src/index.html
+++ b/src/main/ng/src/index.html
@@ -19,5 +19,5 @@
             <span class="text-white">simple scalable service virtualization.</span>
         </div>
     </nav>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+</body>
 </html>
