--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ng</title>
+  <title>Rason</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-light sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">Rason</a>
-        </div>
-    </nav>
     <app-root></app-root>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-light fixed-bottom">
-        <div class="container-fluid">
-            <span class="text-white">simple scalable service virtualization.</span>
-        </div>
-    </nav>
 <script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
