--- a/src/main/ng/src/index.html
+++ b/src/main/ng/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- google ad -->
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({google_ad_client: "ca-pub-1291611366220562", enable_page_level_ads: true});</script>
+  <!-- google ad -->
 </head>
 <body>
     <app-root></app-root>
